chore: switch to WAHA and clean legacy wa scripts

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ PORT=3000
 DATABASE_URL="postgresql://impostor:impostorpass@localhost:5432/impostordb?schema=public"
 GEMINI_API_KEY="YOUR_GEMINI_KEY"
 MERCADOPAGO_ACCESS_TOKEN="YOUR_MP_TOKEN"
-EVOLUTION_API_URL="http://localhost:8080"
-EVOLUTION_API_KEY="YOUR_EVOLUTION_KEY"
+WAHA_API_URL="http://localhost:3002"
+WAHA_API_KEY="YOUR_WAHA_KEY"
