--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,67 +15,26 @@ services:
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - MERCADOPAGO_ACCESS_TOKEN=${MERCADOPAGO_ACCESS_TOKEN}
       - NGROK_URL=http://72.61.47.40:3000
-      # Integrations
-      - EVOLUTION_API_URL=${EVOLUTION_API_URL:-http://evolution_api:8080}
-      - EVOLUTION_API_KEY=${EVOLUTION_API_KEY}
+      # WhatsApp Integration (WAHA)
+      - WAHA_API_URL=${WAHA_API_URL:-http://waha:3000}
+      - WAHA_API_KEY=${WAHA_API_KEY:-changeme}
     volumes:
       # Persist SQLite DB
       - ./prisma:/app/prisma
     depends_on:
-      - evolution-api
+      - waha
 
-  evolution-api:
-    image: atendai/evolution-api:v2.1.1
-    container_name: evolution_api
+  waha:
+    image: devlikeapro/waha:latest
+    container_name: waha
     restart: always
     ports:
-      - "8080:8080"
+      - "3002:3000"
     environment:
-      - SERVER_URL=http://localhost:8080
-      - DOCKER_ENV=true
-      - AUTHENTICATION_TYPE=apikey
-      - AUTHENTICATION_API_KEY=YOUR_EVOLUTION_KEY
-      # DB
-      - DATABASE_ENABLED=true
-      - DATABASE_PROVIDER=postgresql
-      - DATABASE_CONNECTION_URI=postgresql://evolution:evolution@evolution_postgres:5432/evolution
-      - DATABASE_CLIENT_NAME=evolution_exchange
-      # Redis
-      - REDIS_ENABLED=true
-      - REDIS_URI=redis://evolution_redis:6379/0
-      - REDIS_PREFIX_KEY=evolution
-      - CACHE_REDIS_ENABLED=true
-      - CACHE_REDIS_URI=redis://evolution_redis:6379/1
-      - CACHE_REDIS_PREFIX_KEY=evolution_cache
-    depends_on:
-      - redis
-      - evolution_postgres
+      - WAHA_API_KEY=${WAHA_API_KEY:-changeme}
+      - WAHA_WEBHOOK_URL=http://impostor_app:3000/api/webhook
     volumes:
-      - evolution_store:/evolution/store
-      - evolution_instances:/evolution/instances
-
-  evolution_postgres:
-    image: postgres:15-alpine
-    container_name: evolution_postgres
-    restart: always
-    environment:
-      - POSTGRES_USER=evolution
-      - POSTGRES_PASSWORD=evolution
-      - POSTGRES_DB=evolution
-    volumes:
-      - evolution_pgdata:/var/lib/postgresql/data
-
-  redis:
-    image: redis:6.2-alpine
-    container_name: evolution_redis
-    restart: always
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
+      - waha_data:/app/.waha
 
 volumes:
-  evolution_store:
-  evolution_instances:
-  redis_data:
-  evolution_pgdata:
+  waha_data:
