--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mercadopago": "^2.11.0"
+    "mercadopago": "^2.11.0",
+    "qrcode-terminal": "^0.12.0"
   },
   "devDependencies": {
     "@prisma/client": "^5.22.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
+    "@types/qrcode-terminal": "^0.12.0",
     "nodemon": "^3.1.11",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
